@@ -1,6 +1,7 @@
 Revision history for Perl extension JavaScript::QuickJS:
 
 0.17
+- Add Windows support.
 - Fix a leftover debugging artifact.
 
 0.16 Sun 8 Jan 2023
